fix td on mobile

--- a/src/components/ExperienceDetail/Article/InfoBlock.module.css
+++ b/src/components/ExperienceDetail/Article/InfoBlock.module.css
@@ -61,7 +61,7 @@
     @media (max-width: below-mobile) {
       tr {
         td {
-          padding: 8.5px 6px;
+          padding: 8.5px 2px;
         }
       }
     }
